--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -334,6 +334,47 @@ img, video {
     max-width: 1536px;
   }
 }
+.sr-only {
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  clip: rect(0, 0, 0, 0);
+  border-width: 0;
+  white-space: nowrap;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.-inset-0 {
+  inset: 0;
+}
+
+.-inset-0\.5 {
+  inset: -0.125rem;
+}
+
+.inset-y-0 {
+  bottom: 0;
+  top: 0;
+}
+
+.left-0 {
+  left: 0;
+}
+
+.right-0 {
+  right: 0;
+}
+
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -342,6 +383,11 @@ img, video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-2 {
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 .my-4 {
@@ -354,12 +400,12 @@ img, video {
   margin-top: 2rem;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
 .ml-1 {
@@ -382,16 +428,12 @@ img, video {
   margin-right: 0.5rem;
 }
 
+.mr-5 {
+  margin-right: 1.25rem;
+}
+
 .mt-1 {
   margin-top: 0.25rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
 }
 
 .mt-5 {
@@ -414,12 +456,25 @@ img, video {
   display: flex;
 }
 
+.inline-flex {
+  display: inline-flex;
+}
+
 .table {
   display: table;
 }
 
 .hidden {
   display: none;
+}
+
+.size-6 {
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
+.h-16 {
+  height: 4rem;
 }
 
 .min-h-screen {
@@ -434,16 +489,20 @@ img, video {
   max-width: 56rem;
 }
 
-.max-w-\[700px\] {
-  max-width: 700px;
-}
-
 .flex-1 {
   flex: 1 1 0%;
 }
 
+.shrink-0 {
+  flex-shrink: 0;
+}
+
 .grow {
   flex-grow: 1;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .resize {
@@ -452,6 +511,10 @@ img, video {
 
 .flex-col {
   flex-direction: column;
+}
+
+.items-center {
+  align-items: center;
 }
 
 .justify-end {
@@ -466,26 +529,29 @@ img, video {
   justify-content: space-between;
 }
 
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse:0;
+  margin-left: calc(1rem * (1 - var(--tw-space-x-reverse)));
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+}
+
+.space-y-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse:0;
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+  margin-top: calc(0.25rem * (1 - var(--tw-space-y-reverse)));
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
-.border-t {
-  border-top-width: 1px;
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .border-gray-200 {
   --tw-border-opacity:1;
   border-color: rgb(229 231 235/var(--tw-border-opacity));
-}
-
-.border-gray-300 {
-  --tw-border-opacity:1;
-  border-color: rgb(209 213 219/var(--tw-border-opacity));
 }
 
 .bg-gray-100 {
@@ -498,8 +564,26 @@ img, video {
   background-color: rgb(229 231 235/var(--tw-bg-opacity));
 }
 
+.bg-gray-900 {
+  --tw-bg-opacity:1;
+  background-color: rgb(17 24 39/var(--tw-bg-opacity));
+}
+
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-3 {
@@ -522,18 +606,25 @@ img, video {
   padding-top: 0.25rem;
 }
 
+.py-2 {
+  padding-bottom: 0.5rem;
+  padding-top: 0.5rem;
+}
+
 .py-3 {
-  padding-bottom: 0.75rem;
   padding-top: 0.75rem;
 }
 
-.py-7 {
-  padding-bottom: 1.75rem;
-  padding-top: 1.75rem;
+.pb-3, .py-3 {
+  padding-bottom: 0.75rem;
 }
 
-.pb-3 {
-  padding-bottom: 0.75rem;
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
 .pt-3 {
@@ -562,11 +653,6 @@ img, video {
   line-height: 2.25rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -590,6 +676,11 @@ img, video {
   font-weight: 600;
 }
 
+.text-gray-300 {
+  --tw-text-opacity:1;
+  color: rgb(209 213 219/var(--tw-text-opacity));
+}
+
 .text-gray-500 {
   --tw-text-opacity:1;
   color: rgb(107 114 128/var(--tw-text-opacity));
@@ -598,6 +689,16 @@ img, video {
 .text-gray-700 {
   --tw-text-opacity:1;
   color: rgb(55 65 81/var(--tw-text-opacity));
+}
+
+.text-stone-800 {
+  --tw-text-opacity:1;
+  color: rgb(41 37 36/var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity:1;
+  color: rgb(255 255 255/var(--tw-text-opacity));
 }
 
 body {
@@ -612,6 +713,120 @@ body:is(.dark *) {
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, Aptos, Roboto, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+}
+
+.btn {
+  align-items: center;
+  border-radius: 0.25rem;
+  display: inline-flex;
+  font-weight: 500;
+  justify-content: center;
+  padding: 0.5rem 1rem;
+  transition-duration: 0.2s;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  --tw-ring-offset-shadow:var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow:var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 rgba(0, 0, 0, 0));
+  --tw-ring-offset-width:2px;
+}
+
+.btn:focus:is(.dark *) {
+  --tw-ring-offset-color:#111827;
+}
+
+.btn-primary {
+  --tw-bg-opacity:1;
+  background-color: rgb(3 105 161/var(--tw-bg-opacity));
+  --tw-text-opacity:1;
+  color: rgb(255 255 255/var(--tw-text-opacity));
+}
+
+.btn-primary:hover {
+  --tw-bg-opacity:1;
+  background-color: rgb(12 74 110/var(--tw-bg-opacity));
+}
+
+.btn-primary:focus {
+  --tw-ring-opacity:1;
+  --tw-ring-color:rgb(2 132 199/var(--tw-ring-opacity));
+}
+
+.btn-primary:is(.dark *) {
+  --tw-bg-opacity:1;
+  background-color: rgb(3 105 161/var(--tw-bg-opacity));
+}
+
+.btn-primary:hover:is(.dark *) {
+  --tw-bg-opacity:1;
+  background-color: rgb(12 74 110/var(--tw-bg-opacity));
+}
+
+.btn-primary:focus:is(.dark *) {
+  --tw-ring-opacity:1;
+  --tw-ring-color:rgb(3 105 161/var(--tw-ring-opacity));
+}
+
+.btn-secondary {
+  --tw-bg-opacity:1;
+  background-color: rgb(113 113 122/var(--tw-bg-opacity));
+  --tw-text-opacity:1;
+  color: rgb(255 255 255/var(--tw-text-opacity));
+}
+
+.btn-secondary:hover {
+  --tw-bg-opacity:1;
+  background-color: rgb(63 63 70/var(--tw-bg-opacity));
+}
+
+.btn-secondary:focus {
+  --tw-ring-opacity:1;
+  --tw-ring-color:rgb(63 63 70/var(--tw-ring-opacity));
+}
+
+.btn-secondary:is(.dark *) {
+  --tw-bg-opacity:1;
+  background-color: rgb(82 82 91/var(--tw-bg-opacity));
+}
+
+.btn-secondary:hover:is(.dark *) {
+  --tw-bg-opacity:1;
+  background-color: rgb(39 39 42/var(--tw-bg-opacity));
+}
+
+.btn-secondary:focus:is(.dark *) {
+  --tw-ring-opacity:1;
+  --tw-ring-color:rgb(39 39 42/var(--tw-ring-opacity));
+}
+
+.btn-nav {
+  border-radius: 0.375rem;
+  font-size: 0.875rem;
+  font-weight: 500;
+  line-height: 1.25rem;
+  padding: 0.5rem 0.75rem;
+  --tw-text-opacity:1;
+  color: rgb(17 24 39/var(--tw-text-opacity));
+}
+
+.btn-nav:hover {
+  text-decoration-line: underline;
+  text-underline-offset: 4px;
+}
+
+.btn-nav:is(.dark *) {
+  --tw-text-opacity:1;
+  color: rgb(229 231 235/var(--tw-text-opacity));
+}
+
+.btn-nav[aria-current=page] {
+  text-decoration-line: underline;
+  text-underline-offset: 4px;
 }
 
 .intro a, .post-content a {
@@ -694,15 +909,13 @@ blockquote:is(.dark *) {
 .tag {
   border-radius: 0.25rem;
   --tw-bg-opacity:1;
-  background-color: rgb(107 114 128/var(--tw-bg-opacity));
+  background-color: rgb(209 213 219/var(--tw-bg-opacity));
   padding: 0.125rem 0.375rem;
-  --tw-text-opacity:1;
-  color: rgb(229 231 235/var(--tw-text-opacity));
 }
 
 .tag:is(.dark *) {
   --tw-bg-opacity:1;
-  background-color: rgb(71 85 105/var(--tw-bg-opacity));
+  background-color: rgb(30 41 59/var(--tw-bg-opacity));
 }
 
 .post-content h1 {
@@ -745,6 +958,7 @@ blockquote:is(.dark *) {
 
 .highlight pre {
   background-color: #f4f4f5;
+  border-radius: 0.5rem;
   margin-top: 1rem;
 }
 
@@ -1092,9 +1306,42 @@ code.highlighter-rouge {
   background-color: rgb(229 231 235/var(--tw-bg-opacity));
 }
 
-.hover\:bg-gray-300:hover {
+.hover\:bg-gray-500:hover {
   --tw-bg-opacity:1;
-  background-color: rgb(209 213 219/var(--tw-bg-opacity));
+  background-color: rgb(107 114 128/var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-700:hover {
+  --tw-bg-opacity:1;
+  background-color: rgb(55 65 81/var(--tw-bg-opacity));
+}
+
+.hover\:text-white:hover {
+  --tw-text-opacity:1;
+  color: rgb(255 255 255/var(--tw-text-opacity));
+}
+
+.hover\:underline:hover {
+  text-decoration-line: underline;
+}
+
+.hover\:underline-offset-4:hover {
+  text-underline-offset: 4px;
+}
+
+.focus\:ring-2:focus {
+  --tw-ring-offset-shadow:var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow:var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 rgba(0, 0, 0, 0));
+}
+
+.focus\:ring-inset:focus {
+  --tw-ring-inset:inset;
+}
+
+.focus\:ring-white:focus {
+  --tw-ring-opacity:1;
+  --tw-ring-color:rgb(255 255 255/var(--tw-ring-opacity));
 }
 
 .dark\:block:is(.dark *) {
@@ -1110,24 +1357,34 @@ code.highlighter-rouge {
   border-color: rgb(55 65 81/var(--tw-border-opacity));
 }
 
-.dark\:border-gray-800:is(.dark *) {
-  --tw-border-opacity:1;
-  border-color: rgb(31 41 55/var(--tw-border-opacity));
-}
-
 .dark\:bg-gray-800:is(.dark *) {
   --tw-bg-opacity:1;
   background-color: rgb(31 41 55/var(--tw-bg-opacity));
 }
 
-.dark\:bg-gray-900:is(.dark *) {
+.dark\:bg-gray-950:is(.dark *) {
   --tw-bg-opacity:1;
-  background-color: rgb(17 24 39/var(--tw-bg-opacity));
+  background-color: rgb(3 7 18/var(--tw-bg-opacity));
+}
+
+.dark\:text-gray-200:is(.dark *) {
+  --tw-text-opacity:1;
+  color: rgb(229 231 235/var(--tw-text-opacity));
 }
 
 .dark\:text-gray-400:is(.dark *) {
   --tw-text-opacity:1;
   color: rgb(156 163 175/var(--tw-text-opacity));
+}
+
+.dark\:text-stone-300:is(.dark *) {
+  --tw-text-opacity:1;
+  color: rgb(214 211 209/var(--tw-text-opacity));
+}
+
+.dark\:text-white:is(.dark *) {
+  --tw-text-opacity:1;
+  color: rgb(255 255 255/var(--tw-text-opacity));
 }
 
 .dark\:hover\:bg-gray-700:hover:is(.dark *) {
@@ -1140,13 +1397,44 @@ code.highlighter-rouge {
   background-color: rgb(31 41 55/var(--tw-bg-opacity));
 }
 
+.dark\:hover\:bg-gray-950:hover:is(.dark *) {
+  --tw-bg-opacity:1;
+  background-color: rgb(3 7 18/var(--tw-bg-opacity));
+}
+
+@media (min-width: 640px) {
+  .sm\:static {
+    position: static;
+  }
+  .sm\:inset-auto {
+    inset: auto;
+  }
+  .sm\:my-5 {
+    margin-bottom: 1.25rem;
+    margin-top: 1.25rem;
+  }
+  .sm\:ml-6 {
+    margin-left: 1.5rem;
+  }
+  .sm\:block {
+    display: block;
+  }
+  .sm\:hidden {
+    display: none;
+  }
+  .sm\:items-stretch {
+    align-items: stretch;
+  }
+  .sm\:justify-start {
+    justify-content: flex-start;
+  }
+  .sm\:pr-0 {
+    padding-right: 0;
+  }
+}
 @media (min-width: 768px) {
   .md\:inline {
     display: inline;
-  }
-  .md\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
   }
 }
 
